tests/compile/fail/hegel_test_two_params.rs
#[hegel::test]
fn main(tc: hegel::TestCase, x: bool) {
    let _ = (tc, x);
}
